Fix unittest